--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "grid_file": "./inputs/grid.parquet",
     "input_file": "./inputs/input.parquet",
     "output_path": "./outputs/",
-    "num_processes": 4,
+    "num_processes": 2,
     "municipio":["all"],
-    "uf":["MA"],
+    "uf":["all"],
     "grid_spacing": 0.5,
     "skip_input_gen":false,
     "skip_grid_gen":false,
