Correcoes de log e multiprocessing

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "grid_file": "./inputs/grid.parquet",
     "input_file": "./inputs/input.parquet",
-    "arquivos_final":"split_ma",
+    "arquivos_final":"split_balsas",
     "output_path": "./outputs/",
-    "num_processes": 5,
-    "grid_from_clause":"from ibge.pa_br_uf_ibge_2022 pbui where pbui.sigla_uf ='AP'",
-    "input_from_clause":"from car.car_mv c where c.uf = 'AP'",
+    "num_processes": 12,
+    "grid_from_clause":"from ibge.pa_br_municipios_ibge_2022 a where a.nm_mun  = 'Balsas'",
+    "input_from_clause":"from car.car_mv c where c.municipio  = 'Balsas'",
     "grid_spacing": 0.5,
     "skip_input_gen":false,
     "skip_grid_gen":false,
