--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
     "grid_file": "./inputs/grid.parquet",
     "input_file": "./inputs/input.parquet",
-    "arquivos_final":"split_avaliacao_impacto",
+    "arquivos_final":"split_ma",
     "output_path": "./outputs/",
-    "num_processes": 10,
+    "num_processes": 5,
     "grid_from_clause":"from ibge.pa_br_uf_ibge_2022 a where a.sigla_uf  = 'MA'",
-    "input_from_clause":"from car.car_mv c where c.uf = 'MA'",
+    "input_from_clause":"from car.car_temp c where c.uf = 'MA'",
     "grid_spacing": 0.5,
     "skip_input_gen":false,
     "skip_grid_gen":false,
-    "skip_prepare_inputs":true
+    "skip_prepare_inputs":false
 
 }
